--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "spendtap",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "vite",
@@ -13,6 +14,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "vite": "^5.4.21"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16",
+    "vite": "^7.1.12",
+    "@tailwindcss/postcss": "^4.1.16"
   }
 }
