--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.16",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.16",
-    "vite": "^7.1.12",
-    "@tailwindcss/postcss": "^4.1.16"
+    "vite": "^7.1.12"
   }
 }
