--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VITE_APP_LANG=es
-VITE_API_BASE_URL=http://localhost:8000
-VITE_API_TOKEN=your-secure-api-token-here
+VITE_API_BASE_URL=http://localhost:8500
+VITE_API_TOKEN=12345
 VITE_DEV=1
